--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -53,7 +53,7 @@ material-dropdown:defined {
   }
 }
 #content {
-  /* flex-grow: 1;
+  /* sflex-grow: 1;
   background-color: #ffffff;
   padding: 10px;
   width: 85%; */
